@@ -1,3 +1,8 @@
+2005-09-26  Jakub Jelinek  <jakub@redhat.com>
+
+	* testsuite/libgomp.fortran/omp_parse3.f90: Fix non-conforming
+	constructs.
+
 2005-09-26  Diego Novillo  <dnovillo@redhat.com>
 
 	* testsuite/libgomp.dg/shared-1.c: New test.
